# routes/api.php
@@ -39,5 +39,6 @@ Route::domain(env('DOMAIN_ADMIN', 'admin.dream-aero.ru'))->group(function () {
 		Route::get('legal_entities', [ApiController::class, 'getLegalEntities']);
 		Route::get('promos', [ApiController::class, 'getPromos']);
 		Route::get('promo', [ApiController::class, 'getPromo']);
+		Route::get('profile/reset', [ApiController::class, 'resetProfile']);
 	});
 });
